Add docs for 102.3

--- a/cardano-cli/create-address/slt-1021.md
+++ b/cardano-cli/create-address/slt-1021.md
@@ -61,12 +61,13 @@ f3d0125ea6bda66d5be8cdb2abc6c23d2d31a1511f018eccd798c42ba0312fdd     0        25
 
 `f3d0125ea6bda66d5be8cdb2abc6c23d2d31a1511f018eccd798c42ba0312fdd#0` is called a UTxO. Now you are ready for Lesson 102.2.
 
-### 8. Bonus: Get ready for Lesson 102.3
-Send your PPBL 2024 Token from your browser wallet to the address you just built with `cardano-cli`.
+### 8. Bonus: Get ready for Lessons 102.3 and 102.4
+Send some Scaffold Tokens and your PPBL 2024 Token from your browser wallet to the address you just built with `cardano-cli`.
 ```bash
 ppbl-2024-cli-wallet $ cardano-cli query utxo --testnet-magic 1 --address $(cat payment.addr)
                            TxHash                                 TxIx        Amount
 --------------------------------------------------------------------------------------
+14bccae0db2169d1c088a0e04c1cb18e1a0f8fe7e10792f0dfa82e3a605c8cdf     0        1228350 lovelace + 5000 5e74a87d8109db21fe3d407950c161cd2df7975f0868e10682a3dbfe.7070626c323032342d73636166666f6c642d746f6b656e + TxOutDatumNone
 88c75d8946df437963f76b462a65cb1820d5c75e8a04a62cd038ed72e8bae39a     0        1193870 lovelace + 1 903c419ee7ebb6bf4687c61fb133d233ef9db2f80e4d734db3fbaf0b.3232327070626c323032342d64656d6f33 + TxOutDatumNone
 f3d0125ea6bda66d5be8cdb2abc6c23d2d31a1511f018eccd798c42ba0312fdd     0        250000000 lovelace + TxOutDatumNone
 ```
